2002-11-07   Markus Rost  <rost@math.ohio-state.edu>

	* cus-dep.el (custom-make-dependencies): Fix comment inserted in
	cus-load.el.

2002-11-06  Dave Love  <fx@gnu.org>

	* simple.el (quoted-insert): Bind keyboard-translate-table around
	read-char.

	* international/ucs-tables.el: Use keyboard-translate-table coding
	system property, not translation-table-for-input, for
	vietnamese-viscii & al.
	(translation-table-for-input): Set,
	don't defvar, and make permanent-local.
	(ucs-unify-8859, ucs-unify-8859, ucs-fragment-8859): Add/remove
	set-buffer-major-mode-hook, not quail-activate-hook.
	(ucs-set-table-for-input): Renamed from ucs-quail-activate.
	(ucs-unify-8859, ucs-unify-8859, ucs-fragment-8859): Setup
	keyboard-translate-table, not translation-table-for-input.
	Modify set-buffer-major-mode-hook, not quail-activate-hook.
	(ucs-fragment-8859): Don't use translation-table-for-input coding
	system property.
	(ucs-quail-activate): Deleted.
	(ucs-set-table-for-input): New.
	(ucs-minibuffer-setup): Use it.

	* international/quail.el (quail-input-string-to-events): Use
	keyboard-translate-table, not translation-table-for-input.

	* files.el (normal-mode): Call ucs-set-table-for-input.

	* international/mule.el (set-buffer-file-coding-system): Call
	ucs-set-table-for-input.

2002-11-06  Richard M. Stallman  <rms@gnu.org>

	* replace.el (query-replace, query-replace-regexp): Doc fixes.

	* emacs-lisp/bytecomp.el (byte-compile-lambda):
	Handle progn like let, inside interactive spec.

	* textmodes/tex-mode.el (tex-dvi-view-command): Value can be sexp.
	Initialize to a suitable sexp.
	(tex-view): Evaluate tex-dvi-view-command and use the value.

2002-11-06  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (coding-system-eol-type-mnemonic): Use
	eol-mnemonic-undecided if CODING-SYSTEM is nil.

2002-11-06  Kim F. Storm  <storm@cua.dk>

	* info.el (Info-fontify-node): Fixed hiding of *note references
	with embedded file names like (xxx.yyy).